<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    tools:context=".ContentDetailActivity">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/contentDetailShimmerFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/skeletonview_content_detail_layout"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/contentAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true"
        android:isScrollContainer="false"
        android:visibility="invisible"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/contentCollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorTwo"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/colorTwo">

            <ImageView
                android:id="@+id/imageContentDetailBackPhoto"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:alpha="0.8"
                android:contentDescription="@string/msg_content_backdrop_photo"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                android:src="@drawable/poster_avengerinfinity"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabContentFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="end"
                android:onClick="saveToDb"
                android:src="@drawable/ic_content_favorite_border"
                app:backgroundTint="@color/colorTwo"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/contentToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewContentPhoto"
                android:layout_width="130dp"
                android:layout_height="180dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="200dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/imageContentDetailPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/msg_content_poster_photo"
                    android:scaleType="fitXY"
                    android:src="@drawable/poster_avengerinfinity"/>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutContent1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="240dp"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/txtContentDetailTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="164dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="The Simpson"/>

                <TextView
                    android:id="@+id/txtContentDetailReleaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="164dp"
                    android:layout_marginTop="6dp"
                    android:drawableStart="@drawable/ic_content_release_date"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtContentDetailTitle"
                    tools:text=" 2019-08-01"/>

                <TextView
                    android:id="@+id/txtContentDetailGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="164dp"
                    android:layout_marginTop="6dp"
                    android:drawableStart="@drawable/ic_content_genre"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtContentDetailReleaseDate"
                    tools:text=" Action | Drama"/>

                <TextView
                    android:id="@+id/txtContentDetailRuntime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="164dp"
                    android:layout_marginTop="6dp"
                    android:drawableStart="@drawable/ic_content_runtime"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtContentDetailGenre"
                    tools:text=" 663 Episodes"/>

                <View
                    android:id="@+id/viewContent1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorOne"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtContentDetailRuntime" />

                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_content_detail_rating"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewContent1" />

                <ImageView
                    android:id="@+id/imageRating"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/msg_ikon_rating"
                    android:src="@drawable/tmdb_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtRating" />

                <TextView
                    android:id="@+id/txtContentDetailRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageRating"
                    app:layout_constraintTop_toBottomOf="@+id/txtRating"
                    tools:text="70%"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorOne"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageRating" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentDetailBodyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_content_detail_overview"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtContentDetailOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOverview"
                tools:text="As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain."/>

            <TextView
                android:id="@+id/txtCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_content_detail_topcast"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtContentDetailOverview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewContentDetailCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCast"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>